# ruStvelte

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js
client/routes/: index.svelte
src/: categories.rs  main.rs
