[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.0"
reqwest = "0.11.9"
rocket = "0.5.0-rc.1" 
tokio = {version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_json = "1.0"
serde_derive = "1.0.136"
