[package]
name = "rust-svelte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "4"
reqwest = "0.11.9"
rocket = "0.5.0-rc.1" 
tokio = {version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_json = "1.0"
serde_derive = "1.0.136"
futures = "0.3.21"
warp = "0.3.2"
#rocket_contrib = "0.4.10"
